[gd_scene load_steps=7 format=3 uid="uid://dvrocordc0ap4"]

[ext_resource type="Script" uid="uid://b35n6o02kcdq2" path="res://Main Scene/main_menu.gd" id="1_y0b71"]
[ext_resource type="PackedScene" uid="uid://ldjb0hn0jswp" path="res://Options/volume_bar.tscn" id="2_oq52u"]
[ext_resource type="PackedScene" uid="uid://5rpql355qj0t" path="res://Main Scene/level_play_button.tscn" id="2_xrgpx"]

[sub_resource type="LabelSettings" id="LabelSettings_oq52u"]
font_size = 128
font_color = Color(0.0196078, 1, 1, 1)
shadow_size = 25
shadow_color = Color(0.313726, 0.0862745, 1, 0.631373)

[sub_resource type="LabelSettings" id="LabelSettings_xrgpx"]
font_size = 64
font_color = Color(0.0196078, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e4aow"]
font_size = 128
shadow_size = 25
shadow_color = Color(0, 0, 0, 0.631373)

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_y0b71")

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2(1950, 0)
anchor_mode = 0

[node name="Main" type="Node2D" parent="."]

[node name="Title" type="Label" parent="Main"]
offset_right = 1920.0
offset_bottom = 240.0
text = "DODGING MANIA"
label_settings = SubResource("LabelSettings_oq52u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level Select" type="Label" parent="Main"]
offset_top = 180.0
offset_right = 1920.0
offset_bottom = 270.0
text = "Level select"
label_settings = SubResource("LabelSettings_xrgpx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FireEmblem" parent="Main" instance=ExtResource("2_xrgpx")]
offset_left = 180.0
offset_top = 510.0
offset_right = 450.0
offset_bottom = 600.0
button_text = "Fire Emblem"
track_name = "Fire Emblem"
arena_scene_path = "res://Main Scene/Arena Scenes/Fire Emblem Arena.tscn"
savefile_path = "fireemblem.score"

[node name="Tutorial" parent="Main" instance=ExtResource("2_xrgpx")]
offset_left = 180.0
offset_top = 330.0
offset_right = 450.0
offset_bottom = 420.0
button_text = "Tutorial"
track_name = "Tutorial"
arena_scene_path = "res://Main Scene/Arena Scenes/Tutorial Arena.tscn"
savefile_path = "tutorial.score"

[node name="Exit" type="Button" parent="Main"]
offset_top = 989.0
offset_right = 270.0
offset_bottom = 1080.0
theme_override_font_sizes/font_size = 60
text = "Exit"

[node name="Options" type="Button" parent="Main"]
offset_left = 1650.0
offset_top = 990.0
offset_right = 1920.0
offset_bottom = 1081.0
theme_override_font_sizes/font_size = 60
text = "Options"

[node name="OptionsZone" type="Node2D" parent="."]
position = Vector2(1950, 0)

[node name="Options" type="Label" parent="OptionsZone"]
offset_right = 1920.0
offset_bottom = 240.0
text = "OPTIONS"
label_settings = SubResource("LabelSettings_e4aow")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolume" parent="OptionsZone" instance=ExtResource("2_oq52u")]
unique_name_in_owner = true
offset_left = 420.0
offset_top = 780.0
offset_right = 690.0
offset_bottom = 796.0
bus_name = "Master"
volume_label_name = "Master Volume"

[node name="MusicVolume" parent="OptionsZone" instance=ExtResource("2_oq52u")]
unique_name_in_owner = true
offset_left = 810.0
offset_top = 780.0
offset_right = 1080.0
offset_bottom = 796.0
bus_name = "Music"
volume_label_name = "Music Volume"

[node name="SFXVolume" parent="OptionsZone" instance=ExtResource("2_oq52u")]
unique_name_in_owner = true
offset_left = 1200.0
offset_top = 780.0
offset_right = 1470.0
offset_bottom = 796.0
bus_name = "SFX"
volume_label_name = "SFX Volume"

[node name="Menu" type="Button" parent="OptionsZone"]
offset_left = 1650.0
offset_top = 990.0
offset_right = 1920.0
offset_bottom = 1081.0
theme_override_font_sizes/font_size = 60
text = "Back"

[node name="ignore" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="ignore"]
layout_mode = 0
offset_left = 1920.0
offset_right = 1950.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.509804)

[connection signal="pressed" from="Main/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Main/Options" to="." method="_go_to_options"]
[connection signal="pressed" from="OptionsZone/Menu" to="." method="_go_to_menu"]
